# german_visa_app_materialschecklist

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Lease_Contract_English.docx  PR.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  材料清单.docx  租房合同1.docx
.github/workflows/: build.yml
docs/superpowers/plans/: 2025-03-11-visa-checklist-implementation.md  2025-03-12-open-links-in-browser.md
docs/superpowers/specs/: 2025-03-11-visa-checklist-design.md  2025-03-12-open-links-in-browser-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChecklistItem.tsx  ImportExportMenu.tsx  ProgressBar.tsx  SearchBar.tsx  SkeletonLoader.tsx  SuccessBadge.tsx
src/data/: checklistData.ts
src/pages/: ChecklistPage.tsx  RoleSelectPage.tsx
src/stores/: useAppStore.ts
src/types/: index.ts
src/utils/: excel.ts
