[package]
name = "visa-checklist"
version = "1.0.0"
description = "德国留学签证清单"
authors = []
edition = "2021"

[lib]
name = "visa_checklist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
