[package]
name = "german_visa_app_materialschecklist"
version = "2.0.6"
description = "德国留学签证清单"
authors = []
edition = "2021"

[lib]
name = "german_visa_app_materialschecklist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
